--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/nuno/.netbeans/7.4/build.properties
+user.properties.file=/Users/andrepinheiro/Library/Application Support/NetBeans/7.4/build.properties
